# mizuchi

./: .gitignore  AGENTS.md  CAPABILITY_MATRIX.md  Cargo.toml  Dockerfile  README.md  STRATEGY.md  TODO.md  analysis-sub_807ECFC.md  functional-equivalence-research.md  gba-emulator-plan.md  install.ps1  install.sh  mizuchi.example.yaml  package-lock.json  pyproject.toml  reconkit.example.yaml  sample-behavioral-result.json
.codex/: config.toml
.compound-engineering/: config.local.yaml
.cursor/: hooks.json  mcp.json
.cursor/commands/: help.md  (+5 more)
context/: ctx.h
crates/decomp-core/: Cargo.toml
crates/decomp-core/src/: adapter.rs  lib.rs  model.rs  report.rs  workspace.rs
docs/: lfg-smoke.md  plugin-marketplace-readiness.md  re-pipeline-bootstrap.md  scorer-extension.md  vacuum-architecture.md  vacuum-cli.md  vacuum-workflow.md
scripts/: audit-plugin-readiness.sh  binary-source-roundtrip.py  bootstrap-re-pipeline.sh  build-and-verify.sh  cl-compile.sh  commit-verified-match.sh  compile-and-view-assembly.sh  compile-local-fixture.sh  compile-placeholder.sh  compile-trial.sh  compile-x86-32-scaffold.sh  decomp-cli.sh  decomp-readiness.sh  elf-auto-trivial.py  elf-function-slice.py  extract-aggregated-data.cjs  extract-m2c-refs.cjs  generate-easy-prompts.ts  generate-specific-prompts.ts  generate-tier-prompts.ts  get-context.sh  get-workspace-context.sh  help-command.sh  import-one-shot-tasks.py  init-vacuum-state.sh  inject-context.sh  integrate-verified-match.sh  lfg-smoke.sh  list-prompts.sh  matcher.sh  normalize-binary.py  objdiff-gate.sh  one-shot-source-archive-verify.py  one-shot-source-claims.py  one-shot-source-clean.py  one-shot-source-deliverable-verify.py  one-shot-source-proof.py  one-shot-source-validate.py  one-shot-source-verify.py  one-shot-source.py  (+44 more)
tests/: README.md  agentdecompile_seed_test.sh  bootstrap_re_pipeline_test.sh  build_and_verify_test.sh  commit_verified_match_test.sh  compile_and_view_assembly_test.sh  context_batch_top_level_test.sh  context_export_llm_index_test.sh  decomp_cli_validate_test.sh  decomp_function_cli_test.sh  decomp_readiness_test.sh  elf_auto_trivial_i386_test.sh  elf_auto_trivial_test.sh  elf_function_slice_test.sh  function_candidate_alias_dedupe_test.sh  i386_signed_imm8_compare_sourcegen_test.sh  i386_signed_two_arg_compare_sourcegen_test.sh  i386_signed_zero_compare_sourcegen_test.sh  i386_stack_arg_bitmask_sourcegen_test.sh  i386_stack_arg_bool_sourcegen_test.sh  i386_stack_arg_const_min_max_sourcegen_test.sh  i386_stack_arg_imm8_binary_op_sourcegen_test.sh  i386_stack_arg_lea_multiply_sourcegen_test.sh  i386_stack_arg_leaf_sourcegen_test.sh  i386_stack_arg_neg_cmov_sourcegen_test.sh  i386_stack_arg_nonzero_cmov_const_select_sourcegen_test.sh  i386_stack_arg_nonzero_const_select_sourcegen_test.sh  i386_stack_arg_sdiv_magic_sourcegen_test.sh  i386_stack_arg_sdiv_pow2_sourcegen_test.sh  i386_stack_arg_shift_imm8_sourcegen_test.sh  i386_stack_arg_srem_magic_sourcegen_test.sh  i386_stack_arg_srem_pow2_sourcegen_test.sh  i386_stack_arg_udiv_magic_sourcegen_test.sh  i386_stack_arg_udiv_urem_pow2_sourcegen_test.sh  i386_stack_arg_urem_magic_sourcegen_test.sh  i386_three_arg_add_sub_sourcegen_test.sh  i386_three_arg_commutative_sourcegen_test.sh  (+116 more)
(+444 files in other folders)
