[workspace]
members = [
  "crates/decomp-core",
  "crates/decomp-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
hex = "0.4.3"
object = { version = "0.37.3", features = ["read", "write"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "macros"] }
