[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mizuchi-re"
version = "0.1.0"
description = "Imperative, resumable reverse-engineering/source-parity orchestration."
requires-python = ">=3.11,<3.14"
dependencies = []

[project.scripts]
mizuchi-recover = "mizuchi_re.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
