[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reconkit-re"
version = "0.1.2"
description = "Imperative, resumable reverse-engineering/source-parity orchestration."
requires-python = ">=3.11,<3.15"
dependencies = []

[project.scripts]
reconkit-cli = "reconkit_re.reconkit_cli:main"
reconkit-recover = "reconkit_re.cli:main"
recovery-cli = "recovery_runtime.reconkit_cli:main"
recovery-recover = "recovery_runtime.cli:main"

[tool.setuptools.data-files]
"share/reconkit-re/scripts" = [
  "scripts/binary-source-roundtrip.py",
  "scripts/one-shot-source.py",
  "scripts/one-shot-source-archive-verify.py",
  "scripts/one-shot-source-claims.py",
  "scripts/one-shot-source-deliverable-verify.py",
  "scripts/one-shot-source-proof.py",
  "scripts/one-shot-source-validate.py",
  "scripts/one-shot-source-verify.py",
  "scripts/source-authority-report.py",
]

[tool.setuptools.packages.find]
where = ["src"]
